# alpha-zero

./: CMakeLists.txt  README.md  main.cpp
checkpoints/: ttt_chk.pt
neural/: alphazero.h  network.h  node.h  replay_buffer.h
tictactoe/: tictactoe.cpp  tictactoe.h
